--- a/package.json
+++ b/package.json
@@ -12,13 +12,24 @@
     "eslint-plugin-react": "^7.10.0",
     "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.7",
-    "preact": "^8.2.9"
+    "preact": "^8.2.9",
+    "preact-compat": "^3.18.2",
+    "proptypes": "^1.1.0",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "prestart": "rm -rf dist .cache",
     "prebuild": "rm -rf dist .cache",
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
+  },
+  "alias": {
+    "react": "preact-compat",
+    "react-dom": "preact-compat"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5"
   },
   "babel": {
     "presets": [
