--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "dependencies": {
     "@babel/core": "^7.0.0-beta.56",
     "@babel/plugin-transform-react-jsx": "^7.0.0-beta.56",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-preset-preact": "^1.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^5.3.0",
     "eslint-plugin-react": "^7.10.0",
+    "mobx": "^5.0.3",
+    "mobx-preact": "^3.0.0",
     "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.7",
     "preact": "^8.2.9",
     "preact-compat": "^3.18.2",
+    "prettier": "^1.14.0",
     "proptypes": "^1.1.0",
     "react-router-dom": "^4.3.1"
   },
@@ -32,10 +38,17 @@
     "trailingComma": "es5"
   },
   "babel": {
-    "presets": [
-      "preact"
-    ],
+    "presets": [],
     "plugins": [
+      [
+        "transform-decorators-legacy"
+      ],
+      [
+        "transform-class-properties"
+      ],
+      [
+        "transform-object-rest-spread"
+      ],
       [
         "module-resolver",
         {
@@ -64,6 +77,7 @@
       "eslint:recommended",
       "plugin:react/recommended"
     ],
+    "parser": "babel-eslint",
     "parserOptions": {
       "ecmaFeatures": {
         "jsx": true
@@ -101,7 +115,8 @@
         {
           "argsIgnorePattern": "^_"
         }
-      ]
+      ],
+      "react/prop-types": 0
     }
   }
 }
