--- a/.postcssrc
+++ b/.postcssrc
@@ -1,5 +1,9 @@
 {
+  "modules": true,
   "plugins": {
-    "autoprefixer": true
+    "autoprefixer": true,
+    "postcss-modules": {
+      camelCase: true,
+    },
   }
 }
