--- a/package.json
+++ b/package.json
@@ -11,23 +11,27 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "classnames": "^2.2.6",
     "eslint": "^5.3.0",
     "eslint-plugin-react": "^7.10.0",
     "mobx": "^5.0.3",
     "mobx-preact": "^3.0.0",
     "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.7",
+    "postcss-modules": "^1.3.2",
     "preact": "^8.2.9",
     "preact-compat": "^3.18.2",
     "prettier": "^1.14.0",
     "proptypes": "^1.1.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "serve": "^9.4.2"
   },
   "scripts": {
     "prestart": "rm -rf dist .cache",
     "prebuild": "rm -rf dist .cache",
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "serve": "serve dist"
   },
   "alias": {
     "react": "preact-compat",
